# meeting-finder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
common/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: model.rs
crates/frontend/: Cargo.toml  index.html  package-lock.json  package.json
crates/frontend/.cargo/: config.toml
crates/frontend/src/: main.rs  view.rs
crates/frontend/src/view/: about.rs  app.rs  components.rs  hooks.rs  services.rs
crates/frontend/src/view/components/: about.rs  finder.rs  logo.rs  meeting_list.rs  meeting_list_item.rs  search.rs  spinner.rs  world_map.rs
crates/frontend/src/view/hooks/: use_config.rs
crates/frontend/src/view/services/: logo_mapper.rs  meeting_service.rs
crates/frontend/style/: config.scss  main.scss
crates/frontend/style/components/: about.scss  button.scss  finder.scss  input.scss  layout.scss  map.scss  modal.scss  search.scss  typography.scss
crates/meeting-indexer/: Cargo.toml
crates/meeting-indexer/src/: index.rs  main.rs  server.rs  source.rs
crates/meeting-indexer/src/source/: na_holland.rs
docker/: nginx.conf  supervisord.conf
frontend/: .editorconfig  index.html  package-lock.json  package.json
frontend/src/: api.ts  main.ts  models.ts  page.ts  style.scss
frontend/src/api/: index.ts  locationApi.ts  meetingApi.ts
frontend/src/style/: config.scss  main.scss  mixins.scss
frontend/src/style/components/: about.scss  button.scss  finder.scss  layout.scss  modal.scss  typography.scss
frontend/src/view/: callback.ts  index.ts  logo.ts  meetingDetailsPopup.ts  meetingMap.ts  resultsList.ts  searchBar.ts
meeting-finder/: index.html  package-lock.json  package.json
meeting-finder/src/: page.ts
meeting-indexer/: Cargo.toml
meeting-indexer/src/: index.rs  main.rs  meeting.rs  position_lookup.rs  server.rs  source.rs
meeting-indexer/src/source/: aa.rs  aa_eu.rs  bmlt.rs  na_holland.rs  wp_sites.rs
