[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
utoipa = ["serde", "dep:utoipa"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }

serde = { version = "1.0.150", features = ["derive"], optional = true }
utoipa = { version = "2.4.2", features = ["chrono"], optional = true }
