[package]
name = "meeting-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.23"
thiserror = "1.0.37"

reqwest = { version = "0.11.13", features = ["json"] }
select = "0.6.0"

serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

rusqlite = { version = "0.28.0", features = ["chrono"] }

clap = { version = "4.0.29", features = ["derive"] }

actix-web = "4"
