[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
utoipa = ["serde", "dep:utoipa"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }

serde = { workspace = true, features = ["derive"], optional = true }
utoipa = { workspace = true, features = ["chrono"], optional = true }
