[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", features = ["serde"] }

serde.workspace = true

yew = { version = "0.20.0", features = ["csr"] }

gloo-utils = "0.1.6"
wasm-bindgen = { version = "0.2.83", features = ["serde"] }
serde-wasm-bindgen = "0.4.5"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }