[package]
name = "meeting-indexer"
version = "0.1.0"
edition = "2021"
description = "A REST-Api for querying 12 step meetings"
license = "GPL-3.0"

[dependencies]

common = { path = "../common", features = ["utoipa"] }

# Basic utilities
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
futures-util = "0.3.25"
regex = "1.7.0"
lazy_static = "1.4.0"

# Fetching
reqwest = { version = "0.11.13", features = ["json"] }
select = "0.6.0"

# Json
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.89"

# Database
rusqlite = { version = "0.28.0", features = ["chrono"] }

# CLI
clap = { version = "4.0.29", features = ["derive"] }

# REST API
actix-web = "4"
actix-cors = "0.6.4"
env_logger = "0.10.0"

utoipa-swagger-ui = { version = "3.0.1", features = ["actix-web"] }
utoipa = { workspace = true, features = ["actix_extras", "chrono"] }
